--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   freezed_annotation: ^2.2.0
   shared_preferences: ^2.1.1
+  flutter_keyboard_visibility: ^5.4.1
   google_sign_in: ^6.1.0
   sign_in_with_apple: ^4.3.0
   flutter_login_facebook: ^1.6.2
