--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_vibrate: ^1.3.0
   flutter_displaymode: ^0.6.0
+  # upi_pay: ^1.0.1
 
   #ui
   image: ^4.0.17
