--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   firebase_auth: ^4.0.2
   upi_india: ^3.0.1
   android_intent_plus: ^4.0.2
+  razorpay_flutter: ^1.3.5
 
 
 dev_dependencies:
