--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   upi_india: ^3.0.1
   android_intent_plus: ^4.0.2
   razorpay_flutter: ^1.3.5
+  crypto: ^3.0.3
 
 
 dev_dependencies:
