--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,21 +19,21 @@ jobs:
           flutter-version: '3.10.6'
       - run: flutter pub get
       - run: flutter build apk --multidex
-      - run: flutter build windows
+      # - run: flutter build windows
       
-      - name: Extract mpv files
-        run: 7z x mpc_paste_in_build.7z
+      # - name: Extract mpv files
+      #   run: 7z x mpc_paste_in_build.7z
     
-      - name: Archive Release
-        uses: thedoctor0/zip-release@master
-        with:
-          type: 'zip'
-          filename: TorFlix-${{github.ref_name}}-windows.zip
-          directory: build/windows/runner/Release
+      # - name: Archive Release
+      #   uses: thedoctor0/zip-release@master
+      #   with:
+      #     type: 'zip'
+      #     filename: TorFlix-${{github.ref_name}}-windows.zip
+      #     directory: build/windows/runner/Release
       - name: Push Release
         uses: ncipollo/release-action@v1
         with:
-         artifacts: "build/app/outputs/flutter-apk/*.apk,build/windows/runner/Release/TorFlix-${{github.ref_name}}-windows.zip"
+         artifacts: "build/app/outputs/flutter-apk/*.apk"
          #artifacts: "build/windows/runner/Release/TorFlix-${{github.ref_name}}-windows.zip"
          token: ${{ secrets.TOKEN }}
          tag: 1.0.${{github.run_number}}
